fix Builder preview overflow bug on small height screens

--- a/src/index.less
+++ b/src/index.less
@@ -694,6 +694,7 @@ header {
   margin: unset;
   padding: 24px 40px 40px 40px;
   height: calc(100vh - 65px);
+  overflow-y: auto;
 }
 
 .info {
@@ -818,7 +819,7 @@ header {
 
 .previewWrap {
   width: 100%;
-  height: 100%;
+  height: auto;
   background: @w;
   border: 1px solid @pale-grey-three;
   border-radius: 4px;
@@ -829,7 +830,7 @@ header {
 
 .previewMain {
   width: 100%;
-  height: 100%;
+  height: auto;
   border: 1px solid @pale-grey-three;
   border-radius: 4px;
   background: @pale-grey-two;
@@ -3011,7 +3012,7 @@ table {
 
 .previewMain {
   width: 100%;
-  height: 100%;
+  height: auto;
   border: 1px solid @pale-grey-three;
   border-radius: 4px;
   background: @pale-grey-two;
